apps/backend/crates/kaya-core/tests/fail/without_token.stderr
error[E0624]: associated function `new` is private
 --> tests/fail/without_token.rs:9:50
  |
9 |     let _token = kaya_core::edit::ApprovalToken::new(&session, Default::default());
  |                                                  ^^^ private associated function
  |
 ::: src/edit.rs
  |
  |     pub(crate) fn new(_session: &UserSession, edit_id: Uuid) -> Self {
  |     ---------------------------------------------------------------- private associated function defined here
